--- a/android-engineer.html
+++ b/android-engineer.html
@@ -170,15 +170,15 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">Waterloo</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/scribd/4d276015-3a2d-4cc8-9ea8-e24f6d4d2721'>Scribd - Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/scribd/4d276015-3a2d-4cc8-9ea8-e24f6d4d2721'>Scribd - Android Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gloo/c53caeb2-afda-4089-9e5d-3ab3a584dd31'>Gloo - Senior Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/c53caeb2-afda-4089-9e5d-3ab3a584dd31'>Gloo - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freenow/jobs/1748884'>Job Application for Lead Android Engineer (m/f/d) at FREE NOW</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1748884'>Job Application for Lead Android Engineer (m/f/d) at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -235,7 +235,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gospotcheck/3163f7ad-db85-43cd-a1e7-c431d7be8db1'>GoSpotCheck - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gospotcheck/3163f7ad-db85-43cd-a1e7-c431d7be8db1'>GoSpotCheck - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... 200+ enterprise brands in 70 countries across 6 continents power their mobile 
 workforces with GoSpotCheck. Our software helps teams perfect merchandising,
@@ -261,7 +261,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -286,7 +286,7 @@ Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
 <p><span class="badge badge-light">Mumbai New York California Mumbai Bangalore</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42157&localeCode=en-us'>Android Performance Tools DevOps Engineer - Cambridge ... - ARM</a></h5> 
+<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42157&localeCode=en-us'>Android Performance Tools DevOps Engineer - Cambridge ... - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... ... Senior Technical Evangelist - Mobile Studio Cambridge; Senior Technical 
 Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p>
