Job Application for Biostatistician  at JUUL Labs. Job Application for Senior Statistical Programmer  at JUUL Labs. Job Application for Statistical Programmer  at JUUL Labs. Principal Biostatistician - Syneos Health Careers. Principal Biostatistician - Syneos Health Careers. Sr Statistical Programmer - Syneos Health Careers. Veristat Careers - Manager, Statistical Programming. Principal Biostatistician - Syneos Health Careers. Principal Biostatistician - Syneos Health Careers. Sr Statistical Programmer - Syneos Health Careers. Sr Statistician. Principal Biostatistician - PPD Careers. Massive Insights Statistician | SmartRecruiters. Test and Evaluation Statistician - McLean, VA or Bedford, MA - MITRE Careers. Premier Research Careers - Senior Biostatistician. Premier Research Careers - Principal Biostatistical Programmer. Sr Statistical Programmer - Syneos Health Careers. The Climate Corporation Careers - Data Scientist - Statistics. PSI CRO Senior Statistician | SmartRecruiters. PSI CRO Senior Statistician | SmartRecruiters. Bio-Statistical Research Consultant #0095 job at The Greentree Group in Beavercreek, OH, powered by JobScore. Revance Therapeutics, Inc. Careers - Senior Biostatistician. Veristat Careers - Manager of Statistical Programming. Premier Research Careers - Senior Biostatistician. Premier Research Careers - Senior Biostatistician. Director, Statistics (Immunology/Rheumatology) - AbbVie Careers. Manager/Senior Manager, Statistics (Statistical Innovation) - AbbVie Careers. Debiopharm Group - Jobs: Senior Statistician - Apply online. Senior Research and Statistical Analyst - Demography. A123 Systems Application Support Statistician | SmartRecruiters. Premier Research Careers - Principal Biostatistical Programmer. Premier Research Careers - Principal Biostatistical Programmer. TTi Senior Biostatistican | SmartRecruiters. Senior Statistical Programmer- REMOTE in. Premier Research Careers - Senior Biostatistician. Job Application for Statistical Geneticist

--- a/statistics.html
+++ b/statistics.html
@@ -39,6 +39,30 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1794940'>Job Application for Biostatistician  at JUUL Labs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1796793'>Job Application for Senior Statistical Programmer  at JUUL Labs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1796812'>Job Application for Statistical Programmer  at JUUL Labs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/veristat/job/oybBafwe'>Veristat Careers - Manager, Statistical Programming</a></h5> 
 <p><span class="badge badge-light">Montreal Boston Canada Taipei</span></p>
 <p>Posted on: 2019-07-27</p>
@@ -60,7 +84,7 @@
 <p>4 days ago ... Each of these marketing channels center around a rich central problem from 
 deriving value from sparse data to auction theory and game theory all with the?...</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -88,7 +112,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692155445-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999692155445-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -192,7 +216,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oBrAafww'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/oBrAafww'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -242,11 +266,11 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/alyvant/jobs/4206185002'>Job Application for Computational Statistician at Alyvant</a></h5> 
+<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4206185002'>Job Application for Computational Statistician at Alyvant</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -295,7 +319,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30099'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30099'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -308,7 +332,7 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://www.imperial.ac.uk/jobs/description/MED01243/research-fellow-statistics'>Research Fellow in Statistics | Jobs | Imperial College London</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.imperial.ac.uk/jobs/description/MED01243/research-fellow-statistics'>Research Fellow in Statistics | Jobs | Imperial College London</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-07-17</p>
 <hr/>
@@ -345,7 +369,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/0rzb2y6loQ/Statistical-Analyst'>Statistical Analyst - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/0rzb2y6loQ/Statistical-Analyst'>Statistical Analyst - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -357,7 +381,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/5BB61A45C8'>Statistics &amp; Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/5BB61A45C8'>Statistics &amp; Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -366,7 +390,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p>3 days ago ... Principal Data Scientist - Statistician. Venice, CA. Data Science. Full-time. Submit 
 your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read?...</p>
 <hr/>
-<h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Maryland---Rockville/Expert-Biostatistician_214332'>Expert Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Maryland---Rockville/Expert-Biostatistician_214332'>Expert Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Experience with Bayesian methods. ? Experience of statistical programming (e.g., 
 in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
@@ -435,30 +459,6 @@ support for the implementation of data models and the reporting of clinical tria
 <h5><a href='https://bame-recruitment-limited.workable.com/j/68CD755956'>BAME Recruitment Limited - Jobs: Senior Research and Statistical Analyst - Demography - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-10</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/chegg/job/osHhafwk'>Chegg Careers - Subject Matter Expert - Statistics</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-09</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/A123Systems/743999691314112-application-support-statistician'>A123 Systems Application Support Statistician | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Waltham, MA</span></p>
-<p>Posted on: 2019-07-08</p>
-<hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-biostatistician-29940'>Sr Biostatistician - Syneos Health Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-08</p>
-<hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-29940'>Sr Biostatistician - Syneos Health Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-07</p>
-<hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/25B41D8281'>Statistics &amp; Data Corporation (SDC) - Jobs: Biostatistician - Apply online</a></h5> 
-<p><span class="badge badge-light">Tempe, Arizona</span></p>
-<p>Posted on: 2019-07-06</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999691191098-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-05</p>
 <hr/>
 
 
