ServiceNow Careers - Sr. Software Engineer-Full Stack. Job Application for Senior Mobile SDET (Software Developer In Test) at JUUL Labs. Job Application for Software Engineer – Computational Fluid Dynamics at JUUL Labs. Guidewire Software, Inc. Careers - Senior Software Developer - Mississauga, ON, Canada. NICE Actimize Careers - Software Engineer. Spry Squared, Inc. Software Engineer | SmartRecruiters. Spireon Careers - Sr. Software Engineer in Test. Traveloka Sr. Software Engineer - Data | SmartRecruiters. Square Software Engineer (Frontend), Point of Sale Invoices | SmartRecruiters. Tucows Careers - Intermediate Software Developer. Axon - Embedded Software Engineer. Axon - Senior Embedded Software Engineer. Fanatics - Principal Software Engineer. Fanatics - Software Engineer. Fanatics - Senior Software Engineer. Fanatics - Software Engineer # 5244. Full Stack Senior Software Engineer - h2o.ai - Career Page. Senior Software Engineer (Multiple States) - h2o.ai - Career Page. Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.. Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.. Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.. Co-op Software Engineer - DevOps - Nokia Careers. Blue Wire Software JAVA SOFTWARE DEVELOPER | SmartRecruiters. Blue Wire Software Software Developer Engineer in Test | SmartRecruiters. Seequent - Jobs: Senior Software Developer - Apply online. Seequent - Jobs: Software Developer - Apply online. Seequent - Jobs: Software Developer (2 roles) - Apply online. Quotient Technology Inc. Careers - Software Engineer-1. Job Application for Software Engineer (Rust) at Starry. Job Application for Principal System Software Engineer (Linux) at Starry. Job Application for Software Engineer, Node.js at Starry. Magnitude Software Careers - Senior C++ & Go Software Developer. Junior Software Engineer -  Activision Careers. Sr. Software Engineer - Central Tech -  Activis

--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqYY9fwf&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nKWaWLw2'>ServiceNow Careers - Sr. Software Engineer-Full Stack</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-27</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/juullabs/jobs/1788957'>Job Application for Senior Mobile SDET (Software Developer In Test) at JUUL Labs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -175,7 +179,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiC29fwP&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nuaYVLwN'>ServiceNow Careers - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiC29fwP&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nuaYVLwN'>ServiceNow Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -299,7 +303,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/0PxjLpCn4L/Modeling-Software-Engineer-9382823'>Modeling Software Engineer (9382823) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/0PxjLpCn4L/Modeling-Software-Engineer-9382823'>Modeling Software Engineer (9382823) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -323,7 +327,7 @@
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1785796'>Job Application for Software Engineer - API Management  at Fitbit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1785796'>Job Application for Software Engineer - API Management  at Fitbit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -331,7 +335,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/varomoney/e7bdaa31-325a-4376-bab4-6b0bd667724d'>Varo Money - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/varomoney/e7bdaa31-325a-4376-bab4-6b0bd667724d'>Varo Money - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -356,7 +360,7 @@ Generation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Ruby Software Engineer at Farmdrop.</p>
 <hr/>
-<h5><a href='https://ratesetter.workable.com/j/A219608FCA?viewed=true'>RateSetter - Jobs: Senior Software Engineer (Full Stack) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ratesetter.workable.com/j/A219608FCA?viewed=true'>RateSetter - Jobs: Senior Software Engineer (Full Stack) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Software Engineer (Full Stack) at RateSetter.</p>
 <hr/>
@@ -388,7 +392,7 @@ Generation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/attabotics/9bce80ea-086f-4f6d-9557-b6fb5f4fde95?lever-source=Indeed'>Attabotics - Senior Software Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/attabotics/9bce80ea-086f-4f6d-9557-b6fb5f4fde95?lever-source=Indeed'>Attabotics - Senior Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... You want to think outside of the box and continually challenge your own limits, as 
 well as those around you. You have a mad scientist mentality where you want?...</p>
@@ -438,16 +442,12 @@ design, providing users with a platform to make beautiful designs for any projec
 <p>4 days ago ... Apply online for the job of Staff Software Engineer, Applied Machine Learning at 
 SmartNews, Inc.</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/enova/jobs/1622664'>Job Application for Senior Software Engineer (Brazil) at Enova International</a></h5> 
 <p><span class="badge badge-light">Brazil Brazil S?o Paulo Brazil</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/forwardnetworks/e9c8777b-28d0-40f0-b9b5-91249094e4b1'>Forward Networks - Sr. Software Engineer, Backend</a></h5> 
-<p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 
